# ntbind

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
cpp/include/ntbind/: common.hpp  cv_builtins.hpp  integral_builtins.hpp  nt_builtins.hpp  runtime.hpp  support_library.hpp  symtable.hpp
crates/ntbind/: Cargo.toml
crates/ntbind-patch/: Cargo.toml
crates/ntbind-patch/src/: discover.rs  lib.rs  main.rs  patch.rs  pe.rs  walk.rs
crates/ntbind/src/: __macro_support.rs  crypto.rs  error.rs  lib.rs  macros.rs  nt.rs  opaque.rs  public.rs  symtbl.rs
crates/ntbind/tests/: patcher_format.rs  smoke.rs
crates/ntbindgen/: Cargo.toml
crates/ntbindgen/examples/: dump_chain.rs  dump_publics.rs  dump_type.rs
crates/ntbindgen/src/: config.rs  ir.rs  lib.rs  main.rs  merge.rs  name.rs  pdb_io.rs  predicates.rs
crates/ntbindgen/src/emit/: common.rs  cpp.rs  mod.rs  rust.rs
crates/ntbindgen/tests/: determinism.rs  emit_rust.rs
examples/sample-driver/: Cargo.toml  rust-toolchain.toml  x86_64-pc-windows-driver.json
examples/sample-driver/.cargo/: config.toml
examples/sample-driver/src/: lib.rs
tests/cpp_stub/ntbind/: support_library.hpp
