[package]
name = "ntbind"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Runtime support for ntbind: wire format, crypto, and field/public macros."

[dependencies]

# Inline the lints rather than `workspace = true` so the library-only
# additions (`missing_docs`, `unwrap_used`, `expect_used`) can layer on
# top of the shared workspace policy.  Cargo refuses to mix the two.
[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
missing_docs = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"
missing_safety_doc = "warn"
unwrap_used = "warn"
expect_used = "warn"
